syntax = "proto3";
package Trading;

import "Packets/Quality.proto";

message ProtoThing
{
    string DefName = 1;
    
    int32 StackCount = 2;
    
    string StuffDefName = 3;
    
    Quality Quality = 4;
    
    int32 HitPoints = 5;
    
    repeated bytes CompProps = 7;

    ProtoThing InnerProtoThing = 6;
};